# flask-multipass-saml-groups

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: integration_test.yaml
flask_multipass_saml_groups/: __init__.py  group_provider.py  plugin.py  provider.py
flask_multipass_saml_groups/group_provider/: __init__.py  base.py  dummy.py  memory.py  sql.py
flask_multipass_saml_groups/migrations/: 20230725_1640_ae387f5fc14a_initial_migration.py
flask_multipass_saml_groups/models/: __init__.py  saml_groups.py
src/: saml_groups_provider.py
tests/: __init__.py  common.py
tests/integration/: common.py  conftest.py  test_login.py  test_provider.py
tests/unit/: test_group.py  test_group_provider.py  test_provider.py
tests/unit/group_provider/sql/: conftest.py  test_group.py  test_provider.py
