[metadata]
name = Flask-Multipass-SAML-Groups
version = 0.0.1
license = Apache-2.0
author = Christopher Bartz
author_email = christopher.bartz@canonical.com

[options]
packages = find:
include_package_data = true
python_requires = ~=3.8
install_requires =
    flask-multipass[saml]>=0.4.3

[options.packages.find]
include =
    flask_multipass_saml_groups
    flask_multipass_saml_groups.*

[options.entry_points]
flask_multipass.identity_providers =
  saml_groups = flask_multipass_saml_groups.provider:SAMLGroupsIdentityProvider
indico.plugins =
    saml_groups = flask_multipass_saml_groups.plugin:SAMLGroupsPlugin